--- a/src/Components/Matches/Matches.css
+++ b/src/Components/Matches/Matches.css
@@ -1,3 +1,40 @@
+.alert-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+
+.alert-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.alert-content {
+  text-align: center;
+}
+
+.alert-content p {
+  margin-bottom: 10px;
+}
+
+.alert-content button {
+  background-color: #ccc;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
 .mtch-wrapper {
   margin-left: 30px;
   margin-right: 30px;
