--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -17,8 +17,8 @@
 }
 
 .ul-menu > li {
-  font-family: "8BIT WONDER", sans-serif;
-  color: var(--text);
+  font-family: "Press Start 2P", cursive;
+  color: white;
   -webkit-text-stroke: 2px var(--container);
   border: 2px solid #000;
   box-shadow: 10px 10px 8px #888888;
