--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: #d7e2de;
+  background-color: #33984b;
+  background-image: linear-gradient(45deg, #33984b 0%, #d3fc7e 100%);
 }
