--- a/src/Components/CreateQuestion/CreateQuestion.css
+++ b/src/Components/CreateQuestion/CreateQuestion.css
@@ -7,13 +7,13 @@
 }
 
 .qst-wrapper > input {
-  box-shadow: 10px 10px 8px #468158;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   padding: 0.5rem;
   border: 1px solid #ccc;
   margin-top: 10px;
   margin-bottom: 10px;
   color: #1a1c2c;
-  background-color: #94b0c2;
+  background-color: var(--text-white);
   flex: 1;
   text-align: center;
   font-size: 0.7rem;
@@ -37,10 +37,9 @@
   color: #f8f2e1;
   width: auto;
   cursor: pointer;
-  background-color: #454857;
-
+  background-color: var(--container);
   border-radius: 5px;
-  box-shadow: 10px 10px 8px #468158;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
 }
 
 .qst-wrapper > button:hover {
