--- a/src/Components/CreateQuiz/CreateQuiz.css
+++ b/src/Components/CreateQuiz/CreateQuiz.css
@@ -1,15 +1,22 @@
 .quiz-container {
+  margin-top: 30px;
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 20px;
-  box-shadow: 10px 10px 8px #888888;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   padding: 0;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: var(--container2);
+  background-color: var(--dgreen);
   align-items: center;
   border-radius: 15px;
+}
+
+.quiz-container > h2,
+h3,
+h4 {
+  text-shadow: 1px 1px 1px black, 0 0 0.4em green, 0 0 0.2em blue;
 }
 
 .quiz-container > h1,
@@ -18,7 +25,8 @@ h3,
 h4 {
   font-family: "Press Start 2P", cursive;
   font-weight: bold;
-  color: var(--container);
+
+  color: var(--text-white);
   display: flex;
   justify-content: center;
   text-align: center;
@@ -28,7 +36,7 @@ h4 {
 .quiz-container > h1 {
   word-spacing: -10px;
   font-size: 2.5rem;
-  -webkit-text-stroke: 3px #f8f2e1;
+  -webkit-text-stroke: 2px var(--dblue);
 }
 
 .radio-wrapper {
@@ -99,13 +107,13 @@ h4 {
 }
 
 .subject-input {
-  box-shadow: 10px 10px 8px #468158;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   padding: 0.5rem;
   border: 1px solid #ccc;
   margin-top: 10px;
   margin-bottom: 10px;
   color: #1a1c2c;
-  background-color: #94b0c2;
+  background-color: var(--text-white);
   flex: 1;
   text-align: center;
   font-size: 1rem;
@@ -124,7 +132,7 @@ h4 {
   cursor: pointer;
   background-color: #454857;
   border-radius: 5px;
-  box-shadow: 10px 10px 8px #468158;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   max-width: 50px;
   min-width: 50px;
 }
@@ -157,10 +165,10 @@ h4 {
   color: #f8f2e1;
   width: auto;
   cursor: pointer;
-  background-color: #454857;
+  background-color: var(--container);
 
   border-radius: 5px;
-  box-shadow: 10px 10px 8px #468158;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
 }
 
 .btn-quiz:hover {
