--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -19,9 +19,10 @@
 .ul-menu > li {
   font-family: "Press Start 2P", cursive;
   color: white;
-  -webkit-text-stroke: 2px var(--container);
+  -webkit-text-stroke: 1px var(--container);
+  border-radius: 10px;
   border: 2px solid #000;
-  box-shadow: 10px 10px 8px #888888;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   margin-top: 50px;
   margin-bottom: 50px;
   list-style: none;
@@ -40,5 +41,5 @@
 }
 
 .ul-menu > li:hover {
-  background-color: var(--text);
+  background-color: #424c6e;
 }
