--- a/src/Components/CreateOption/CreateOption.css
+++ b/src/Components/CreateOption/CreateOption.css
@@ -96,7 +96,7 @@
 }
 
 #add-opt:hover {
-  background-image: linear-gradient(180deg, #95d891, #74bbad);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
 }
 
 .check-opt {
