--- a/src/Components/Matches/Matches.css
+++ b/src/Components/Matches/Matches.css
@@ -3,12 +3,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: var(--dblue);
+  border-radius: 8px;
   border: 1px solid #ccc;
   padding: 20px;
 }
 
 .alert-overlay {
+  color: red;
+  font-size: bold;
   position: fixed;
   top: 0;
   left: 0;
@@ -29,28 +32,36 @@
 }
 
 .alert-content button {
-  background-color: #ccc;
+  color: var(--text-white);
+  background-color: var(--container);
   border: none;
   padding: 5px 10px;
   cursor: pointer;
 }
 
+.alert-content button:hover {
+  color: var(--dblue);
+  background-color: #fff;
+}
+
 .mtch-wrapper {
+  border: 4px solid var(--dgreen);
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 20px;
-  box-shadow: 10px 10px 8px #888888;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.25);
   padding: 0;
   flex-grow: 8;
   display: flex;
   flex-direction: column;
-  background-color: var(--container2);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
   align-items: center;
   border-radius: 15px;
 }
 
 .mtch-wrapper > h1 {
-  font-family: "8BIT WONDER", sans-serif;
+  font-family: "Press Start 2P", cursive;
+  font-weight: bold;
   color: var(--container);
   display: flex;
   justify-content: center;
@@ -71,28 +82,36 @@
 .mtc-li {
   cursor: pointer;
   border: 3px solid #1a1c2c;
-  max-height: 12%;
+  max-height: 30px;
+  min-height: 30px;
   width: 90%;
   margin: 5px 5px;
   color: #1a1c2c;
-  border-radius: 12px;
+  border-radius: 5px;
   display: flex;
   flex: 1;
   text-align: center;
   align-items: center;
-  background-color: #566c86;
+  background-color: var(--dblue);
 }
+
+.mtc-li:hover {
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
+}
+
 .sbj-li {
-  color: #fff;
-  font-size: 1rem;
+  font-family: "Press Start 2P", cursive;
   font-weight: bold;
+  color: var(--text-white);
+  font-size: 0.7rem;
   margin-left: 5px;
   text-align: left;
   flex: 8;
 }
 
 .sbj-opts-wrapper {
-  height: 80%;
+  max-height: 20px;
+  min-height: 20px;
   flex: 2;
   display: flex;
   align-items: center;
@@ -101,6 +120,8 @@
 
 .lvl-li {
   flex: 3;
+  max-height: 13px;
+  min-height: 13px;
   margin-right: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -111,7 +132,7 @@
   background: #454857;
   color: #fff;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -119,13 +140,17 @@
 }
 
 .edit-btn {
+  max-height: 20px;
+  min-height: 22px;
   cursor: pointer;
   flex: 1;
+  border-radius: 8px;
 }
 
 .remove-btn {
   cursor: pointer;
   flex: 1;
+  border-radius: 8px;
   margin-left: 5px;
   background-color: #b13e53;
   margin-right: 5px;
