--- a/src/Components/CreateQuiz/CreateQuiz.css
+++ b/src/Components/CreateQuiz/CreateQuiz.css
@@ -8,7 +8,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: var(--dgreen);
+  border: 4px solid var(--dgreen);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
   align-items: center;
   border-radius: 15px;
 }
@@ -138,7 +139,7 @@ h4 {
 }
 
 .btn-quiz-add:hover {
-  background-image: linear-gradient(180deg, #95d891, #74bbad);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
 }
 
 .qst-ul {
@@ -172,5 +173,5 @@ h4 {
 }
 
 .btn-quiz:hover {
-  background-image: linear-gradient(180deg, #95d891, #74bbad);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
 }
