--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,7 +4,7 @@
   border-bottom: 6px solid #03193f;
   padding: 1rem;
   margin-bottom: 1rem;
-  font-size: 1.2rem;
+  font-size: clamp(0.8rem, 3vw, 1.2rem);
   font-weight: bold;
   color: #ffffff;
   -webkit-text-stroke: 1.5px #03193f;
