--- a/src/Pages/Play-Match/PlayMatch.css
+++ b/src/Pages/Play-Match/PlayMatch.css
@@ -6,15 +6,17 @@
 }
 
 .mtchplay-wrapper {
+  margin-top: 30px;
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 20px;
-  box-shadow: 10px 10px 8px #888888;
+  box-shadow: 10px 10px 8px RGBA(0, 0, 0, 0.25);
   padding: 0;
-  flex-grow: 8;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: var(--container2);
+  border: 4px solid var(--dgreen);
+  background-image: linear-gradient(180deg, #5ac54f, #2a2f4e);
   align-items: center;
   border-radius: 15px;
 }
